--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
                 </ul>
             </div>
         </nav>
+        <section class="splash">
+            <div class="container">
+                <h3>welcome to our studio!</h3>
+                <h2>it's nice to meet you</h2>
+                <a class="btn" href="#">tell me more</a>
+            </div>            
+        </section>
         <script src="" async defer></script>
     </body>
 </html>
