--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css">
         <link rel="stylesheet" href="sass/style.css">
     </head>
     <body>
@@ -20,6 +21,7 @@
                 </ul>
             </div>
         </nav>
+
         <section class="splash">
             <div class="container">
                 <h3>welcome to our studio!</h3>
@@ -27,6 +29,31 @@
                 <a class="btn" href="#">tell me more</a>
             </div>            
         </section>
+
+        <section class="services container">
+            <div class="title">
+                <h2>services</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+            <div class="cards">
+                <div>
+                    <i class="fas fa-briefcase"></i>
+                    <h3>E-Commerce</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dui nisl, euismod et luctus eu, tempus eu dui. Proin et aliquet nibh.</p>
+                </div>
+                <div>
+                    <i class="fas fa-laptop-medical"></i>
+                    <h3>Responsive Web</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dui nisl, euismod et luctus eu, tempus eu dui. Proin et aliquet nibh.</p>
+                </div>
+                <div>
+                    <i class="fas fa-unlock-alt"></i>
+                    <h3>Web Security</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dui nisl, euismod et luctus eu, tempus eu dui. Proin et aliquet nibh.</p>
+                </div>
+            </div>
+        </section>
+
         <script src="" async defer></script>
     </body>
 </html>
