--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>services</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="cards">
+            <div class="cards-1">
                 <div>
                     <i class="fas fa-briefcase"></i>
                     <h3>E-Commerce</h3>
@@ -50,6 +50,59 @@
                     <i class="fas fa-unlock-alt"></i>
                     <h3>Web Security</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dui nisl, euismod et luctus eu, tempus eu dui. Proin et aliquet nibh.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="portfolio">
+            <div class="container">
+                <div class="title">
+                    <h2>our portfolio</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
+                <div class="wrap">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/1279107/pexels-photo-1279107.jpeg?cs=srgb&dl=drewniany-stol-glosnik-kolor-martwa-natura-1279107.jpg&fm=jpg" alt="aparat">
+                        <figcaption>
+                            <h3>Ebony & Ivory</h3>
+                            <p>Branding</p>
+                        </figcaption>  
+                    </figure>
+                    <figure>
+                        <img src="https://images.pexels.com/photos/257897/pexels-photo-257897.jpeg?cs=srgb&dl=bezprzewodowy-biurko-biuro-drewno-257897.jpg&fm=jpg" alt="aparat">
+                        <figcaption>
+                            <h3>Smart Stationary</h3>
+                            <p>Print Design</p>
+                        </figcaption>  
+                    </figure>
+                    <figure>
+                        <img src="https://images.pexels.com/photos/1827548/pexels-photo-1827548.jpeg?cs=srgb&dl=dekoracja-drewniany-drink-filizanka-kawy-1827548.jpg&fm=jpg" alt="aparat">
+                        <figcaption>
+                            <h3>Clever poster</h3>
+                            <p>Print Design</p>
+                        </figcaption>  
+                    </figure>
+                    <figure>
+                        <img src="https://images.pexels.com/photos/21148/pexels-photo.jpg?cs=srgb&dl=bawic-sie-gra-grac-gramofon-21148.jpg&fm=jpg" alt="aparat">
+                        <figcaption>
+                            <h3>Viny record</h3>
+                            <p>Product Mock-up</p>
+                        </figcaption>  
+                    </figure>
+                    <figure>
+                        <img src="https://images.pexels.com/photos/6372/coffee-smartphone-desk-pen.jpg?cs=srgb&dl=biurko-czysty-dzwonic-dlugopis-6372.jpg&fm=jpg" alt="aparat">
+                        <figcaption>
+                            <h3>Treehouse template</h3>
+                            <p>Web design</p>
+                        </figcaption>  
+                    </figure>
+                    <figure>
+                        <img src="https://images.pexels.com/photos/3685538/pexels-photo-3685538.jpeg?cs=srgb&dl=platki-kwiat-projekt-projektowac-3685538.jpg&fm=jpg" alt="aparat">
+                        <figcaption>
+                            <h3>Burned Logo</h3>
+                            <p>Branding</p>
+                        </figcaption>  
+                    </figure>
                 </div>
             </div>
         </section>
