--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>services</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="cards-1">
+            <div class="cards">
                 <div>
                     <i class="fas fa-briefcase"></i>
                     <h3>E-Commerce</h3>
@@ -106,6 +106,17 @@
                 </div>
             </div>
         </section>
+
+        <footer class="container">
+            <p>&copy Copyright 2020 Mikołaj Krawiec</p>
+            <div class="social">
+                <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+                <a href="#"></a><i class="fab fa-facebook-f"></i>Facebook</a>
+                <a href="#"></a><i class="fab fa-pinterest-p"></i>Pinterest</a>
+                <a href="#"></a><i class="fab fa-google-plus-g"></i>Google plus</a>
+            </div>
+
+        </footer>
 
         <script src="" async defer></script>
     </body>
