--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <nav>
-            <div class="navbar container" >
+            <div class="navbar container flex-wrap" >
                 <a class="logo" href="#">golden</a>
                 <ul>
                     <li><a href="#">home</a></li>
@@ -35,7 +35,7 @@
                 <h2>services</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="cards">
+            <div class="cards flex-wrap">
                 <div>
                     <i class="fas fa-briefcase"></i>
                     <h3>E-Commerce</h3>
@@ -60,60 +60,73 @@
                     <h2>our portfolio</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
-                <div class="wrap">
+                <div class="portfolio-cards flex-wrap">
                     <figure>
-                        <img src="https://images.pexels.com/photos/1279107/pexels-photo-1279107.jpeg?cs=srgb&dl=drewniany-stol-glosnik-kolor-martwa-natura-1279107.jpg&fm=jpg" alt="aparat">
-                        <figcaption>
-                            <h3>Ebony & Ivory</h3>
-                            <p>Branding</p>
-                        </figcaption>  
+                        <a href="#">
+                            <img src="https://images.pexels.com/photos/1279107/pexels-photo-1279107.jpeg?cs=srgb&dl=drewniany-stol-glosnik-kolor-martwa-natura-1279107.jpg&fm=jpg" alt="aparat">
+                            <figcaption>
+                                <h3>Ebony & Ivory</h3>
+                                <p>Branding</p>
+                            </figcaption>
+                        </a>  
+                    </figure>
+                    
+                    <figure>
+                        <a href="#">
+                            <img src="https://images.pexels.com/photos/257897/pexels-photo-257897.jpeg?cs=srgb&dl=bezprzewodowy-biurko-biuro-drewno-257897.jpg&fm=jpg" alt="aparat">
+                            <figcaption>
+                                <h3>Smart Stationary</h3>
+                                <p>Print Design</p>
+                            </figcaption>
+                        </a>  
                     </figure>
                     <figure>
-                        <img src="https://images.pexels.com/photos/257897/pexels-photo-257897.jpeg?cs=srgb&dl=bezprzewodowy-biurko-biuro-drewno-257897.jpg&fm=jpg" alt="aparat">
-                        <figcaption>
-                            <h3>Smart Stationary</h3>
-                            <p>Print Design</p>
-                        </figcaption>  
+                        <a href="#">
+                            <img src="https://images.pexels.com/photos/1827548/pexels-photo-1827548.jpeg?cs=srgb&dl=dekoracja-drewniany-drink-filizanka-kawy-1827548.jpg&fm=jpg" alt="aparat">
+                            <figcaption>
+                                <h3>Clever poster</h3>
+                                <p>Print Design</p>
+                            </figcaption> 
+                        </a> 
                     </figure>
                     <figure>
-                        <img src="https://images.pexels.com/photos/1827548/pexels-photo-1827548.jpeg?cs=srgb&dl=dekoracja-drewniany-drink-filizanka-kawy-1827548.jpg&fm=jpg" alt="aparat">
-                        <figcaption>
-                            <h3>Clever poster</h3>
-                            <p>Print Design</p>
-                        </figcaption>  
+                        <a href="#">
+                            <img src="https://images.pexels.com/photos/21148/pexels-photo.jpg?cs=srgb&dl=bawic-sie-gra-grac-gramofon-21148.jpg&fm=jpg" alt="aparat">
+                            <figcaption>
+                                <h3>Viny record</h3>
+                                <p>Product Mock-up</p>
+                            </figcaption>  
+                        </a>
+                    </figure>
+                    <figure> 
+                        <a href="#">
+                            <img src="https://images.pexels.com/photos/6372/coffee-smartphone-desk-pen.jpg?cs=srgb&dl=biurko-czysty-dzwonic-dlugopis-6372.jpg&fm=jpg" alt="aparat">
+                            <figcaption>
+                                <h3>Treehouse template</h3>
+                                <p>Web design</p>
+                            </figcaption>  
+                        </a>
                     </figure>
                     <figure>
-                        <img src="https://images.pexels.com/photos/21148/pexels-photo.jpg?cs=srgb&dl=bawic-sie-gra-grac-gramofon-21148.jpg&fm=jpg" alt="aparat">
-                        <figcaption>
-                            <h3>Viny record</h3>
-                            <p>Product Mock-up</p>
-                        </figcaption>  
-                    </figure>
-                    <figure>
-                        <img src="https://images.pexels.com/photos/6372/coffee-smartphone-desk-pen.jpg?cs=srgb&dl=biurko-czysty-dzwonic-dlugopis-6372.jpg&fm=jpg" alt="aparat">
-                        <figcaption>
-                            <h3>Treehouse template</h3>
-                            <p>Web design</p>
-                        </figcaption>  
-                    </figure>
-                    <figure>
-                        <img src="https://images.pexels.com/photos/3685538/pexels-photo-3685538.jpeg?cs=srgb&dl=platki-kwiat-projekt-projektowac-3685538.jpg&fm=jpg" alt="aparat">
-                        <figcaption>
-                            <h3>Burned Logo</h3>
-                            <p>Branding</p>
-                        </figcaption>  
+                        <a href="#">
+                            <img src="https://images.pexels.com/photos/3685538/pexels-photo-3685538.jpeg?cs=srgb&dl=platki-kwiat-projekt-projektowac-3685538.jpg&fm=jpg" alt="aparat">
+                            <figcaption>
+                                <h3>Burned Logo</h3>
+                                <p>Branding</p>
+                            </figcaption>  
+                        </a>
                     </figure>
                 </div>
             </div>
         </section>
 
-        <footer class="container">
+        <footer class="container flex-wrap">
             <p>&copy Copyright 2020 Mikołaj Krawiec</p>
             <div class="social">
                 <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
-                <a href="#"></a><i class="fab fa-facebook-f"></i>Facebook</a>
-                <a href="#"></a><i class="fab fa-pinterest-p"></i>Pinterest</a>
-                <a href="#"></a><i class="fab fa-google-plus-g"></i>Google plus</a>
+                <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+                <a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a>
+                <a href="#"><i class="fab fa-google-plus-g"></i>Google plus</a>
             </div>
 
         </footer>
