Add navbar for narrow screen

--- a/index.html
+++ b/index.html
@@ -10,15 +10,25 @@
     </head>
     <body>
         <nav>
+            <input type="checkbox" id="check">
+            <label for="check"><i class="fas fa-bars"></i></label>
             <div class="navbar container flex-wrap" >
                 <a class="logo" href="#">golden</a>
                 <ul>
                     <li><a href="#">home</a></li>
-                    <li><a href="#">services</a></li>
+                    <li>
+                        <a href="#">services</a>
+                        <ul class="dropdown">
+                            <li><a href="#">E-Commerce</a></li>
+                            <li><a href="#">Responsive Web</a></li>
+                            <li><a href="#">Web Security</a></li>
+                        </ul>
+                    </li>
                     <li><a href="#">portfolio</a></li>
                     <li><a href="#">about</a></li>
                     <li><a href="#">contact</a></li>
                 </ul>
+
             </div>
         </nav>
 
